--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ comments: true
 
   <h1 class="page-heading"> <span> Carl Einarsson </span></h1>
 
-<p class="kicker"> Musician - Programmer - Traveller</p>
+<p class="kicker"> Musician - Programmer - Sweden - Kalmar</p>
 
 
 </div>
